# ctwenty48

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  build_n_run.sh  conanfile.txt  mcts_params.yaml  readme.md
.github/workflows/: cmake.yml
cnn/models/v1/: saved_model.pb
cnn/models/v1/variables/: variables.index
cnn/tools/: model_from_scratch.sh  new_model.sh  train_management.py  train_model.sh
conan/: default-profile
conan/cppflow/: conanfile.py
conan/csv-parser/: conanfile.py
conan/nana/: conanfile.py
conan/tensorflow/: conanfile.py
cpp/: CMakeLists.txt
cpp/core/: CMakeLists.txt  conanfile.txt
cpp/core/include/: cnn.hh  environment.hh  game_play.hh  mc_estimate.hh  mcts.hh  pos_score.hh  rollout_eval.hh  search.hh  selectors.hh  types.hh  ui.hh
cpp/core/src/: cnn.cc  environment.cc  game_logger.cc  game_play.cc  mc_estimate.cc  mcts.cc  pos_score.cc  rollout_eval.cc  rollout_eval.cpp  search.cc  selectors.cc  types.cc  ui.cc
cpp/core/test/: cnn_test.cc  csv_test.cc  pos_score_test.cc  selector_test.cc  utils_test.cc
cpp/gui_app/: CMakeLists.txt  conanfile.txt
cpp/gui_app/include/: frontend_game.hh  gui.hh  gui_env.hh  observable.hh  widgets.hh
cpp/gui_app/src/: gui.cc  gui_env.cc  main.cc  widgets.cc
cpp/headless_app/: CMakeLists.txt  main.cc
gui/: CMakeLists.txt  conanfile.txt
gui/include/: gui.hh  gui_env.hh  widgets.hh
gui/src/: gui.cc  gui_env.cc  main.cc  widgets.cc
include/: cnn.h  cnn.hh  game_logger.hh  game_play.hh  search.h  search.hh  selectors.hh  types.hh  ui.hh
include/env/: environment.hh
include/gui/: gui.hh  widgets.hh
models/v1/: saved_model.pb
models/v1/variables/: variables.data-00000-of-00001  variables.index
neural-net/models/v1/: keras_metadata.pb
neural-net/models/v1/variables/: variables.data-00000-of-00001
neural-net/train-scripts/: model_from_scratch.sh  new_model.sh  train_model.sh
python/: game_play.py  log_parser.py  models.py  play_n_learn.py  synthetic_data.py  train_management.py
src/: cnn.cc  game_logger.cc  game_play.cc  main.cc  main.cpp  search.cc  selectors.cc  types.cc  ui.cc
src/env/: environment.cc  main.cc
src/gui/: gui.cc  gui_main.cc  test.cc  test2.cc
test/: cnn_test.cc  search_test.cc  selector_test.cc  utils_test.cc
train_tools/: train_management.py
